UPDATE: no post

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Spectral by HTML5 UP</title>
+		<title>Judy's Blog</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -19,7 +19,7 @@
 
 				<!-- Header -->
 					<header id="header" class="alt">
-						<h1><a href="index.html">Spectral</a></h1>
+						<h1><a href="index.html">Judy's Blog</a></h1>
 						<nav id="nav">
 							<ul>
 								<li class="special">
@@ -27,10 +27,6 @@
 									<div id="menu">
 										<ul>
 											<li><a href="index.html">Home</a></li>
-											<li><a href="generic.html">Generic</a></li>
-											<li><a href="elements.html">Elements</a></li>
-											<li><a href="#">Sign Up</a></li>
-											<li><a href="#">Log In</a></li>
 										</ul>
 									</div>
 								</li>
@@ -41,13 +37,9 @@
 				<!-- Banner -->
 					<section id="banner">
 						<div class="inner">
-							<h2>Spectral</h2>
-							<p>Another fine responsive<br />
-							site template freebie<br />
-							crafted by <a href="http://html5up.net">HTML5 UP</a>.</p>
-							<ul class="actions special">
-								<li><a href="#" class="button primary">Activate</a></li>
-							</ul>
+							<h2>Judy's Blog</h2>
+							<p>A place to hold Judy's posts about<br/>
+							traveling, food & something interesting.</p>
 						</div>
 						<a href="#one" class="more scrolly">Learn More</a>
 					</section>
@@ -56,15 +48,14 @@
 					<section id="one" class="wrapper style1 special">
 						<div class="inner">
 							<header class="major">
-								<h2>Arcu aliquet vel lobortis ata nisl<br />
-								eget augue amet aliquet nisl cep donec</h2>
-								<p>Aliquam ut ex ut augue consectetur interdum. Donec amet imperdiet eleifend<br />
-								fringilla tincidunt. Nullam dui leo Aenean mi ligula, rhoncus ullamcorper.</p>
+								<h2>Judy的日记本</h2>
+								<p>用来记录Judy去过的地方、吃过的食物<br/>
+								或者一些值得记录的事。</p>
 							</header>
 							<ul class="icons major">
-								<li><span class="icon fa-gem major style1"><span class="label">Lorem</span></span></li>
-								<li><span class="icon fa-heart major style2"><span class="label">Ipsum</span></span></li>
-								<li><span class="icon solid fa-code major style3"><span class="label">Dolor</span></span></li>
+								<li><a href="https://www.instagram.com/judy9906/" class="icon brands fa-instagram major style3"><span class="label">Instagram</span></a></li>
+								<li><a href="https://github.com/Judie1999" class="icon brands fa-github major style3"><span class="label">Github</span></a></li>
+								<li><a href="mailto:judy9906@gmail.com" class="icon solid fa-envelope major style3"><span class="label">Email</span></a></li>
 							</ul>
 						</div>
 					</section>
@@ -72,24 +63,27 @@
 				<!-- Two -->
 					<section id="two" class="wrapper alt style2">
 						<section class="spotlight">
-							<div class="image"><img src="images/pic01.jpg" alt="" /></div><div class="content">
-								<h2>Magna primis lobortis<br />
-								sed ullamcorper</h2>
-								<p>Aliquam ut ex ut augue consectetur interdum. Donec hendrerit imperdiet. Mauris eleifend fringilla nullam aenean mi ligula.</p>
+							<div class="image"><img src="images/LA/sunset_house.jpg" alt="la_sunset" /></div><div class="content">
+								<h2>Los Angelas</h2>
+								<p>交换回国前的最后一站。咖啡很好喝，海滩落日很美。</p>
 							</div>
 						</section>
 						<section class="spotlight">
-							<div class="image"><img src="images/pic02.jpg" alt="" /></div><div class="content">
-								<h2>Tortor dolore feugiat<br />
-								elementum magna</h2>
-								<p>Aliquam ut ex ut augue consectetur interdum. Donec hendrerit imperdiet. Mauris eleifend fringilla nullam aenean mi ligula.</p>
+							<div class="image"><img src="images/Chicago/5AD2609B-B059-4B2F-9BEA-16729C788683_1_105_c.jpeg" alt="Chicago_night" /></div><div class="content">
+								<h2>Chicago</h2>
+								<p>感恩节去了一趟芝加哥。非常冷，深盘披萨很好吃，楼很高很好看。</p>
 							</div>
 						</section>
 						<section class="spotlight">
-							<div class="image"><img src="images/pic03.jpg" alt="" /></div><div class="content">
-								<h2>Augue eleifend aliquet<br />
-								sed condimentum</h2>
-								<p>Aliquam ut ex ut augue consectetur interdum. Donec hendrerit imperdiet. Mauris eleifend fringilla nullam aenean mi ligula.</p>
+							<div class="image"><img src="images/NY/6C692244-A611-4460-BB12-B01CAFDC9CDB_1_105_c.jpeg" alt="duke_night" /></div><div class="content">
+								<h2>New York</h2>
+								<p>秋假去的，有点冷。</br>我爱高楼大厦！</br>百老汇和博物馆也都很棒www</p>
+							</div>
+						</section>
+						<section class="spotlight">
+							<div class="image"><img src="images/Duke/B21FBFFE-82E0-4CEC-AD7B-58D585845EA6_1_105_c.jpeg" alt="duke_night" /></div><div class="content">
+								<h2>Duke University</h2>
+								<p>交换了一个学期。有很多收获。感觉有很多值得写的。有空一定补。</p>
 							</div>
 						</section>
 					</section>
@@ -98,49 +92,31 @@
 					<section id="three" class="wrapper style3 special">
 						<div class="inner">
 							<header class="major">
-								<h2>Accumsan mus tortor nunc aliquet</h2>
-								<p>Aliquam ut ex ut augue consectetur interdum. Donec amet imperdiet eleifend<br />
-								fringilla tincidunt. Nullam dui leo Aenean mi ligula, rhoncus ullamcorper.</p>
+								<h2>最近</h2>
+								<p>记录一下最近在追/补的一些番什么的。</p>
 							</header>
-							<ul class="features">
-								<li class="icon fa-paper-plane">
-									<h3>Arcu accumsan</h3>
-									<p>Augue consectetur sed interdum imperdiet et ipsum. Mauris lorem tincidunt nullam amet leo Aenean ligula consequat consequat.</p>
+							<ul class="features" styles="line-height:1.75">
+								<li class="fas fa-video">
+									<h3>最近看番</h3>
+									<p>Vivy</br>
+									影宅</br>
+									86-不存在战区</br>
+									奇巧计程车</p>
 								</li>
-								<li class="icon solid fa-laptop">
-									<h3>Ac Augue Eget</h3>
-									<p>Augue consectetur sed interdum imperdiet et ipsum. Mauris lorem tincidunt nullam amet leo Aenean ligula consequat consequat.</p>
+								<li class="fas fa-gamepad">
+									<h3>最近打游戏</h3>
+									<p>FF14</br>
+									Princess Connect: ReDive（摸鱼行会“正规行会”招人啦）</p>
 								</li>
-								<li class="icon solid fa-code">
-									<h3>Mus Scelerisque</h3>
-									<p>Augue consectetur sed interdum imperdiet et ipsum. Mauris lorem tincidunt nullam amet leo Aenean ligula consequat consequat.</p>
+								<li class="fas fa-book">
+									<h3>最近看漫画</h3>
+									<p>辉夜</br>
+									间谍过家家（听说快要动画化了，好耶！）</p>
 								</li>
-								<li class="icon solid fa-headphones-alt">
-									<h3>Mauris Imperdiet</h3>
-									<p>Augue consectetur sed interdum imperdiet et ipsum. Mauris lorem tincidunt nullam amet leo Aenean ligula consequat consequat.</p>
+								<li class="fas fa-sticky-note">
+									<h3>杂项</h3>
+									<p>想去毕业旅行，但是还没有确定什么时候、去哪里、去多久。如果有建议或者想要一起去欢迎私戳！</p>
 								</li>
-								<li class="icon fa-heart">
-									<h3>Aenean Primis</h3>
-									<p>Augue consectetur sed interdum imperdiet et ipsum. Mauris lorem tincidunt nullam amet leo Aenean ligula consequat consequat.</p>
-								</li>
-								<li class="icon fa-flag">
-									<h3>Tortor Ut</h3>
-									<p>Augue consectetur sed interdum imperdiet et ipsum. Mauris lorem tincidunt nullam amet leo Aenean ligula consequat consequat.</p>
-								</li>
-							</ul>
-						</div>
-					</section>
-
-				<!-- CTA -->
-					<section id="cta" class="wrapper style4">
-						<div class="inner">
-							<header>
-								<h2>Arcue ut vel commodo</h2>
-								<p>Aliquam ut ex ut augue consectetur interdum endrerit imperdiet amet eleifend fringilla.</p>
-							</header>
-							<ul class="actions stacked">
-								<li><a href="#" class="button fit primary">Activate</a></li>
-								<li><a href="#" class="button fit">Learn More</a></li>
 							</ul>
 						</div>
 					</section>
@@ -148,14 +124,13 @@
 				<!-- Footer -->
 					<footer id="footer">
 						<ul class="icons">
-							<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-							<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
-							<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
-							<li><a href="#" class="icon brands fa-dribbble"><span class="label">Dribbble</span></a></li>
-							<li><a href="#" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
+							<li><a href="https://www.facebook.com/profile.php?id=100013329648421" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
+							<li><a href="https://www.instagram.com/judy9906/" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
+							<li><a href="https://github.com/Judie1999" class="icon brands fa-github"><span class="label">Dribbble</span></a></li>
+							<li><a href="mailto:judy9906@gmail.com" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
 						</ul>
 						<ul class="copyright">
-							<li>&copy; Untitled</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+							<li>&copy; Runyu He</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
 						</ul>
 					</footer>
 
