--- a/index.html
+++ b/index.html
@@ -26,7 +26,14 @@
 									<a href="#menu" class="menuToggle"><span>Menu</span></a>
 									<div id="menu">
 										<ul>
-											<li><a href="index.html">Home</a></li>
+											<li><a href="index.html"><b>Home</b></a></li>
+											<li><b>2019</b>
+											<ul>
+												<li>Los Angelas</li>
+												<li>Chicago</li>
+												<li>New York</li>
+											</ul>
+											</li>
 										</ul>
 									</div>
 								</li>
