UPDATE: New York

--- a/NY.html
+++ b/NY.html
@@ -10,6 +10,7 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
+		<link rel="stylesheet" href="assets/css/slider.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 	</head>
 	<body class="is-preload">
@@ -31,7 +32,7 @@
 											<ul>
 												<li>Los Angelas</li>
 												<li>Chicago</li>
-												<li>New York</li>
+												<li><a href="NY.html"><u>New York</u></a></li>
 											</ul>
 											</li>
 										</ul>
@@ -44,24 +45,122 @@
 				<!-- Main -->
 					<article id="main">
 						<header>
-							<h2>Generic Page</h2>
-							<p>Aliquam ut ex ut interdum donec amet imperdiet eleifend</p>
+							<h2>New York</h2>
+							<p>去的时候是秋天，非常冷，高楼非常好看，歌剧很棒。</p>
 						</header>
 						<section class="wrapper style5">
 							<div class="inner">
+								<p style="text-align:justify">杜克大学每年秋天有秋假，我们的秋假有4天，并且这边的老师也不会说因为放假就额外布置作业（甚至会有一些课程因为秋假大家要出去玩所以作业延期）。想想这个时间不好好利用一下实在是可惜了，和同学商量了一下就决定一起来纽约玩。</p>
 
-								<h3>Lorem ipsum dolor</h3>
-								<p>Morbi mattis mi consectetur tortor elementum, varius pellentesque velit convallis. Aenean tincidunt lectus auctor mauris maximus, ac scelerisque ipsum tempor. Duis vulputate ex et ex tincidunt, quis lacinia velit aliquet. Duis non efficitur nisi, id malesuada justo. Maecenas sagittis felis ac sagittis semper. Curabitur purus leo, tempus sed finibus eget, fringilla quis risus. Maecenas et lorem quis sem varius sagittis et a est. Maecenas iaculis iaculis sem. Donec vel dolor at arcu tincidunt bibendum. Interdum et malesuada fames ac ante ipsum primis in faucibus. Fusce ut aliquet justo. Donec id neque ipsum. Integer eget ultricies odio. Nam vel ex a orci fringilla tincidunt. Aliquam eleifend ligula non velit accumsan cursus. Etiam ut gravida sapien.</p>
+								<p>
+									<!-- Slideshow container -->
+									<div class="slideshow-container">
+									<!-- Full-width images with number and caption text -->
+									<div class="mySlides fade">
+										<img src="images/NY/DSC03214.JPG" style="width:100%">
+										<div class="text">Grand Central Terminal</div>
+									</div>
+									<div class="mySlides fade">
+										<img src="images/NY/DSC03300.JPG" style="width:100%">
+										<div class="text">Tiffany & CO.</div>
+									</div>
+									<div class="mySlides fade">
+										<img src="images/NY/DSC03302.JPG" style="width:100%">
+										<div class="text">很好看的苹果店</div>
+									</div>
+									<div class="mySlides fade">
+										<img src="images/NY/DSC03359.JPG" style="width:100%">
+										<div class="text">Top of the Rock看夜景</div>
+									</div>
+									<div class="mySlides fade">
+										<img src="images/NY/DSC03374.JPG" style="width:100%">
+										<div class="text">博物馆门口</div>
+									</div>
+									<div class="mySlides fade">
+										<img src="images/NY/DSC03463.JPG" style="width:100%">
+										<div class="text">百老汇</div>
+									</div>
+									<div class="mySlides fade">
+										<img src="images/NY/DSC03480.JPG" style="width:100%">
+										<div class="text">时代广场夜景</div>
+									</div>
+									<div class="mySlides fade">
+										<img src="images/NY/DSC03490.JPG" style="width:100%">
+										<div class="text">纪念碑</div>
+									</div>
+									<div class="mySlides fade">
+										<img src="images/NY/DSC03503.JPG" style="width:100%">
+										<div class="text">纽约三一教堂</div>
+									</div>
+									<div class="mySlides fade">
+										<img src="images/NY/DSC03516.JPG" style="width:100%">
+										<div class="text">船景</div>
+									</div>
+									<div class="mySlides fade">
+										<img src="images/NY/6C692244-A611-4460-BB12-B01CAFDC9CDB_1_105_c.jpeg" style="width:100%">
+										<div class="text">自由女神像</div>
+									</div>
+									<div class="mySlides fade">
+										<img src="images/NY/DSC03568.JPG" style="width:100%">
+										<div class="text">唐人街</div>
+									</div>
+									<!-- Next and previous buttons -->
+									<a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+									<a class="next" onclick="plusSlides(1)">&#10095;</a>
+									</div>
+									<br>
 
-								<p>Vestibulum ultrices risus velit, sit amet blandit massa auctor sit amet. Sed eu lectus sem. Phasellus in odio at ipsum porttitor mollis id vel diam. Praesent sit amet posuere risus, eu faucibus lectus. Vivamus ex ligula, tempus pulvinar ipsum in, auctor porta quam. Proin nec dui cursus, posuere dui eget interdum. Fusce lectus magna, sagittis at facilisis vitae, pellentesque at etiam. Quisque posuere leo quis sem commodo, vel scelerisque nisi scelerisque. Suspendisse id quam vel tortor tincidunt suscipit. Nullam auctor orci eu dolor consectetur, interdum ullamcorper ante tincidunt. Mauris felis nec felis elementum varius.</p>
+									<!-- The dots/circles -->
+									<div style="text-align:center">
+									<span class="dot" onclick="currentSlide(1)"></span> 
+									<span class="dot" onclick="currentSlide(2)"></span> 
+									<span class="dot" onclick="currentSlide(3)"></span> 
+									<span class="dot" onclick="currentSlide(4)"></span> 
+									<span class="dot" onclick="currentSlide(5)"></span> 
+									<span class="dot" onclick="currentSlide(6)"></span> 
+									<span class="dot" onclick="currentSlide(7)"></span> 
+									<span class="dot" onclick="currentSlide(8)"></span> 
+									<span class="dot" onclick="currentSlide(9)"></span> 
+									<span class="dot" onclick="currentSlide(10)"></span> 
+									<span class="dot" onclick="currentSlide(11)"></span> 
+									<span class="dot" onclick="currentSlide(12)"></span> 
+									</div>
+								</p>
+
+								<h3>Day 1 - 第五大道</h3>
+								<p style="text-align:justify">早上九点半的飞机，不到十一点就到了纽约。从机场坐airtrain转地铁到了第五大道（安利一下地铁七天卡，31$可以用七天不限次数），下地铁不远处就可以看到大教堂，在合适的角度天晴的话可以看到教堂自带圣光。中午找到一家港式茶餐厅吃了中饭，店员基本用粤语交谈，普通话也很流利，餐馆味道（也许作为港式茶餐厅不一定谈得上正宗但是）吃的很舒服。走路几分钟就可以到<a href="https://www.grandcentralterminal.com/plan-your-visit/">Grand Central Terminal</a>，这个火车站是很多影视作品的取景地，顶上有很漂亮的图案，并且门口就有我们非常喜欢的Coco（<i>友情提醒：这里的Coco非常非常甜，建议比在国内点的时候少一度的糖</i>）。买了Coco之后，我们选择了直接去几步路远的<a href="https://www.topoftherocknyc.com/?gclid=Cj0KCQjw_dWGBhDAARIsAMcYuJzWbre98KLnS7FO-RjWgRIqZ3m-ZWnGLTDI3V38yQbUmVwot5g7_BUaApoeEALw_wcB"> Top of the Rock</a>，买票可以上到第76～78层参观，露天观景台可以看到周围很大范围内的建筑，并且购买时可以upgrade成sun and star，晚上还可以登一次看纽约夜景。这中间的时间我们看了Trump大厦，打卡了第五大道的蒂凡尼（不确定是不是但是和赫本站过的非常像）和Apple park，去了中央公园，并且因为实在太冷了去了一趟优衣库。</p>
+
+								<p style="text-align:justify">个人感觉Top of the Rock虽然门票价格有点心疼但是还是非常值得去的，从那里可以看到纽约最高的摩天大楼，如果不想upgrade看两次的话个人感觉夜景比白天更加震撼，不过很难拍出那种震撼的感觉，欢迎大家去挑战自己的摄影技术（不给带三脚架）。夕阳场一定很美，不过我们买的时候已经预订完了，如果想看的话一定要提前订票。</p>
+								
+								<p style="text-align:justify">纽约可以吃的还是很多的。路边小车或者711的热狗其实都很不错。港式茶餐厅可以中文点餐，听到中文还是非常亲切的。行程上来说，我们本来是准备下午看完Top of the Rock直接去大都会博物馆，不过下午从Top of the Rock下来算了一下来回路上时间比较折腾，而且看博物馆时间会比较赶，晚上再来也有点太迟了，所以决定第二天上午直接去。第五大道附近可以逛的还是很多的，包括任天堂的店和有一家非常大的玩具店都很棒很治愈。</p>
+
+								<p style="text-align:justify">我们是在Airbnb上订的民宿（感谢lty同学找到了超棒的民宿！！！），住在比较居民区的地方，附近六七百米范围内就有两家便利店，价格也比酒店划算很多，空间也比较宽裕（我们三个人有 一层楼 = 两个卧室 + 一个客厅 + 一个厨房 + 一个卫生间），十一点多路上人还是很多也比较让人安心。第一天会很累，不要指望自己能玩到十二点多什么的，我们十一点就已经累得不行除了吃东西和睡觉已经什么都不想做了。</p>
+
+								<h3>Day 2 - 大都会博物馆 & 联合国 & 时代广场 & 百老汇</h3>
+								<p style="text-align:justify">第一天玩到很迟（吃完宵夜回来真的已经很迟了），不过考虑到行程进度问题还是很早就起床了。坐地铁到<a href="https://www.metmuseum.org">大都会博物馆</a>，在里面待到下午。大都会博物馆非常大，藏品非常多，基本是不能指望看完的。强烈建议去之前看一下藏品分布，计算一下参观路线，先去看最感兴趣的展区，并且注意控制每个展区的时间。负一楼就有餐厅，价格感觉和外面差不多，个人认为没必要专门出去吃，毕竟感觉半天是看不完的。</p>
+
+								<p style="text-align:justify">结束以后去看了联合国，比较不巧的是去的时候是周日，个人感觉不是很好看如果时间紧的话可以不去（主要是我们都没去过所以想去看一看）。</p>
+
+								<p style="text-align:justify">之后就是时代广场。我们买了当晚<a href="https://www.nyc.com/broadway_tickets/?gclid=CjwKCAjwoNuGBhA8EiwAFxomA22USsQzhr8H7Yi0x8XN7b4X3E8WqUcbsg8hUuh2d3H525XIkp8sxhoC6nAQAvD_BwE">百老汇</a>的汉密尔顿的票。强烈安利一下百老汇的歌剧，效果真的非常棒，下次（如果有钱的话）还想再去！！！语文比较差不太会描述，但是真的是非常棒的体验（感谢dy买到了票！！！）。出来之后是晚上十点多，刚好欣赏时代广场的夜景。如果有兴趣可以欣赏零点的灯光秀（看到广告牌上说有），但是考虑到末班地铁时间（加上刚看完汉密尔顿有点太激动了）我们没有等到零点。时代广场的MM世界（MM豆旗舰店？）非常棒。记不清时代广场还是top of the rock了，边上还有非常大的乐高店，还有任天堂旗舰店，感兴趣的可以在地图上搜一下。</p>
+
+								<h3>Day 3 - 世贸 & 华尔街 & 自由女神像</h3>
+
+								<p style="text-align:justify">第三天早上是先到了世贸，原来的基座被改成了纪念碑。之后是华尔街，附近有很多教堂，证交所门口的铜牛非常不巧在我们去的那天早上被环保主义者泼上了红油漆，平时应该是到纽约必定要打卡的点。</p>
+
+								<p style="text-align:justify">然后就去了<a href="https://www.nps.gov/stli/index.htm">自由女神像</a>。我们在网上买了票，所以很快就搞定了。Crown就不用想了（我们买票的时候2020年1月之前已经没有票了），基座还是可以的。上船之前会安检，笔记本好像会被带走单独检查（检查的人好像并没有做什么就把笔记本还给我了，我还准备开机来着他说不用了）。进基座前要存包，存包的1刀在取包之后是会掉出来的（像小时候跟妈妈去苏果超市门口的那种储物柜一样）不要忘了拿（七块多呢x）。岛上有吃的也有纪念品商店。</p>
+
+								<p style="text-align:justify">走之前去了一趟唐人街，买了杯奶茶。有兴趣的同学听说可以去吃火锅，不过价格可能会有点emmm，而且我们主要是真的没时间了orz。</p>
 
 								<hr />
 
-								<h4>Feugiat aliquam</h4>
-								<p>Nam sapien ante, varius in pulvinar vitae, rhoncus id massa. Donec varius ex in mauris ornare, eget euismod urna egestas. Etiam lacinia tempor ipsum, sodales porttitor justo. Aliquam dolor quam, semper in tortor eu, volutpat efficitur quam. Fusce nec fermentum nisl. Aenean erat diam, tempus aliquet erat.</p>
+								<h3>杂项</h3>
 
-								<p>Etiam iaculis nulla ipsum, et pharetra libero rhoncus ut. Phasellus rutrum cursus velit, eget condimentum nunc blandit vel. In at pulvinar lectus. Morbi diam ante, vulputate et imperdiet eget, fermentum non dolor. Ut eleifend sagittis tincidunt. Sed viverra commodo mi, ac rhoncus justo. Duis neque ligula, elementum ut enim vel, posuere finibus justo. Vivamus facilisis maximus nibh quis pulvinar. Quisque hendrerit in ipsum id tellus facilisis fermentum. Proin mauris dui, at vestibulum sit amet, auctor bibendum neque.</p>
-
+								<ul>
+									<li>如果想买百老汇的票一定要提前</li>
+									<li>大都会博物馆要留足时间</li>
+									<li>强烈安利一下去摩天楼上看夜景</li>
+									<li>纽约的机场也有点大，建议多留一点时间候机防止翻车</li>
+								</ul>
 							</div>
 						</section>
 					</article>
@@ -89,6 +188,6 @@
 			<script src="assets/js/breakpoints.min.js"></script>
 			<script src="assets/js/util.js"></script>
 			<script src="assets/js/main.js"></script>
-
+			<script src="assets/js/slider.js"></script>
 	</body>
 </html>
