--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 											<ul>
 												<li>Los Angelas</li>
 												<li>Chicago</li>
-												<li>New York</li>
+												<li><a href="NY.html"><u>New York</u></a></li>
 											</ul>
 											</li>
 										</ul>
