UPDATE: ChuanYu index

--- a/index.html
+++ b/index.html
@@ -70,6 +70,12 @@
 				<!-- Two -->
 					<section id="two" class="wrapper alt style2">
 						<section class="spotlight">
+							<div class="image"><img src="images/ChuanYu/DSC04355.JPG" alt="panda" /></div><div class="content">
+								<h2>四川 + 重庆</h2>
+								<p>历时9天的毕业旅行。第一次和同龄人一起远程旅行，玩的很开心。自然风光和城市里的高楼大厦都很好看。串串和火锅非常好吃。</p>
+							</div>
+						</section>
+						<section class="spotlight">
 							<div class="image"><img src="images/LA/sunset_house.jpg" alt="la_sunset" /></div><div class="content">
 								<h2>Los Angelas</h2>
 								<p>交换回国前的最后一站。咖啡很好喝，海滩落日很美。</p>
@@ -105,10 +111,8 @@
 							<ul class="features" styles="line-height:1.75">
 								<li class="fas fa-video">
 									<h3>最近看番</h3>
-									<p>Vivy</br>
-									影宅</br>
-									86-不存在战区</br>
-									奇巧计程车</p>
+									<p>小林家的龙女仆S</br>
+									我们的重制人生</p>
 								</li>
 								<li class="fas fa-gamepad">
 									<h3>最近打游戏</h3>
@@ -118,11 +122,12 @@
 								<li class="fas fa-book">
 									<h3>最近看漫画</h3>
 									<p>辉夜</br>
+									影宅</br>
 									间谍过家家（听说快要动画化了，好耶！）</p>
 								</li>
 								<li class="fas fa-sticky-note">
 									<h3>杂项</h3>
-									<p>想去毕业旅行，但是还没有确定什么时候、去哪里、去多久。如果有建议或者想要一起去欢迎私戳！</p>
+									<p>毕业旅行圆满结束啦！等有空了就来更新。最近在居家隔离，欢迎找我聊天x</p>
 								</li>
 							</ul>
 						</div>
