ADDED: Suzhou index

--- a/index.html
+++ b/index.html
@@ -27,6 +27,12 @@
 									<div id="menu">
 										<ul>
 											<li><a href="index.html"><b>Home</b></a></li>
+											<li><b>2021</b>
+											<ul>
+												<li>四川 + 重庆</li>
+												<li>苏州</li>
+											</ul>
+											</li>
 											<li><b>2019</b>
 											<ul>
 												<li>Los Angelas</li>
@@ -73,6 +79,12 @@
 							<div class="image"><img src="images/ChuanYu/DSC04355.JPG" alt="panda" /></div><div class="content">
 								<h2>四川 + 重庆</h2>
 								<p>历时9天的毕业旅行。第一次和同龄人一起远程旅行，玩的很开心。自然风光和城市里的高楼大厦都很好看。串串和火锅非常好吃。</p>
+							</div>
+						</section>
+						<section class="spotlight">
+							<div class="image"><img src="images/Suzhou/DSC03873.JPG" alt="subo" /></div><div class="content">
+								<h2>苏州</h2>
+								<p>小时候去过。这次是一日游，主要玩了狮子林、苏博，然后去苏州中心转了一圈。苏博真的好好看www</p>
 							</div>
 						</section>
 						<section class="spotlight">
