--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 											<ul>
 												<li>Los Angelas</li>
 												<li>Chicago</li>
-												<li><a href="NY.html"><u>New York</u></a></li>
+												<li><a href="posts/NY.html"><u>New York</u></a></li>
 											</ul>
 											</li>
 										</ul>
