UPDATE: modify hierachy

--- a/post_NY.html
+++ b/post_NY.html
@@ -38,7 +38,7 @@
 											<ul>
 												<li>Los Angelas</li>
 												<li>Chicago</li>
-												<li><a href="posts/NY.html"><u>New York</u></a></li>
+												<li><a href="post_NY.html"><u>New York</u></a></li>
 											</ul>
 											</li>
 										</ul>
