--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 											<li><a href="index.html"><b>Home</b></a></li>
 											<li><b>2021</b>
 											<ul>
-												<li>四川 + 重庆</li>
+												<li><a href="post_ChuanYu.html">四川 + 重庆</a></li>
 												<li>苏州</li>
 											</ul>
 											</li>
