UPDATE: image path for ChuanYu

--- a/post_ChuanYu.html
+++ b/post_ChuanYu.html
@@ -63,63 +63,63 @@
 									<div class="slideshow-container">
 									<!-- Full-width images with number and caption text -->
 									<div class="mySlides fade">
-										<img src="images/Chuanyu/FB4CDE96-619F-40A1-8A37-ED56DCF51CEB_1_102_o.jpeg" style="width:100%">
+										<img src="images/ChuanYu/FB4CDE96-619F-40A1-8A37-ED56DCF51CEB_1_102_o.jpeg" style="width:100%">
 										<div class="text">峨眉山的猴子</div>
 									</div>
 									<div class="mySlides fade">
-										<img src="images/Chuanyu/DDB9B81F-A610-41FC-B170-F75FC0623C4D_1_105_c.jpeg" style="width:100%">
+										<img src="images/ChuanYu/DDB9B81F-A610-41FC-B170-F75FC0623C4D_1_105_c.jpeg" style="width:100%">
 										<div class="text">峨眉山金顶</div>
 									</div>
 									<div class="mySlides fade">
-										<img src="images/Chuanyu/4A7DE123-2574-46BB-B98F-5B0234E45868_1_102_o.jpeg" style="width:100%">
+										<img src="images/ChuanYu/4A7DE123-2574-46BB-B98F-5B0234E45868_1_102_o.jpeg" style="width:100%">
 										<div class="text">宽窄巷子</div>
 									</div>
 									<div class="mySlides fade">
-										<img src="images/Chuanyu/14EA2E55-1DF3-4C93-B2C8-7F30121D6C66_1_105_c.jpeg" style="width:100%">
+										<img src="images/ChuanYu/14EA2E55-1DF3-4C93-B2C8-7F30121D6C66_1_105_c.jpeg" style="width:100%">
 										<div class="text">雨中都江堰</div>
 									</div>
 									<div class="mySlides fade">
-										<img src="images/Chuanyu/470A8830-922C-467A-BA47-277AE475B13D_1_105_c.jpeg" style="width:100%">
+										<img src="images/ChuanYu/470A8830-922C-467A-BA47-277AE475B13D_1_105_c.jpeg" style="width:100%">
 										<div class="text">九寨沟</div>
 									</div>
 									<div class="mySlides fade">
-										<img src="images/Chuanyu/D7564043-4425-4F19-BBF3-04AF5BB0EE89_1_105_c.jpeg" style="width:100%">
+										<img src="images/ChuanYu/D7564043-4425-4F19-BBF3-04AF5BB0EE89_1_105_c.jpeg" style="width:100%">
 										<div class="text">Judy在九寨沟</div>
 									</div>
 									<div class="mySlides fade">
-										<img src="images/Chuanyu/B5BF73E0-0BEB-47F4-99C0-7268F4DC2992_1_102_o.jpeg" style="width:100%">
+										<img src="images/ChuanYu/B5BF73E0-0BEB-47F4-99C0-7268F4DC2992_1_102_o.jpeg" style="width:100%">
 										<div class="text">黄龙</div>
 									</div>
 									<div class="mySlides fade">
-										<img src="images/Chuanyu/DSC04355.JPG" style="width:100%">
+										<img src="images/ChuanYu/DSC04355.JPG" style="width:100%">
 										<div class="text">大熊猫</div>
 									</div>
 									<div class="mySlides fade">
-										<img src="images/Chuanyu/CA65A16B-8318-406E-AB2E-DF93B2C850F4.jpeg" style="width:100%">
+										<img src="images/ChuanYu/CA65A16B-8318-406E-AB2E-DF93B2C850F4.jpeg" style="width:100%">
 										<div class="text">大熊猫基地的小熊猫</div>
 									</div>
 									<div class="mySlides fade">
-										<img src="images/Chuanyu/A6693AA3-0D04-4091-9611-6A7EED4CF284_1_105_c.jpeg" style="width:100%">
+										<img src="images/ChuanYu/A6693AA3-0D04-4091-9611-6A7EED4CF284_1_105_c.jpeg" style="width:100%">
 										<div class="text">锦里</div>
 									</div>
 									<div class="mySlides fade">
-										<img src="images/Chuanyu/B919E109-E197-46F3-9AD0-FEB300E43855_1_102_o.jpeg" style="width:100%">
+										<img src="images/ChuanYu/B919E109-E197-46F3-9AD0-FEB300E43855_1_102_o.jpeg" style="width:100%">
 										<div class="text">长江索道</div>
 									</div>
 									<div class="mySlides fade">
-										<img src="images/Chuanyu/C8A8C110-18DC-4903-A7E4-99145C7A6FD6_1_102_o.jpeg" style="width:100%">
+										<img src="images/ChuanYu/C8A8C110-18DC-4903-A7E4-99145C7A6FD6_1_102_o.jpeg" style="width:100%">
 										<div class="text">洪崖洞</div>
 									</div>
 									<div class="mySlides fade">
-										<img src="images/Chuanyu/D9A90A00-DD11-4654-94D8-4A601EDAD58A_1_105_c.jpeg" style="width:100%">
+										<img src="images/ChuanYu/D9A90A00-DD11-4654-94D8-4A601EDAD58A_1_105_c.jpeg" style="width:100%">
 										<div class="text">天生三桥的锦鲤</div>
 									</div>
 									<div class="mySlides fade">
-										<img src="images/Chuanyu/BFD6A85D-B4A0-42FB-90FA-6CE34D483C54_1_102_o.jpeg" style="width:100%">
+										<img src="images/ChuanYu/BFD6A85D-B4A0-42FB-90FA-6CE34D483C54_1_102_o.jpeg" style="width:100%">
 										<div class="text">重庆之眼观景台夜景</div>
 									</div>
 									<div class="mySlides fade">
-										<img src="images/Chuanyu/26E6CC10-63FA-413C-B90C-C7CBEF5D9085_1_102_o.jpeg" style="width:100%">
+										<img src="images/ChuanYu/26E6CC10-63FA-413C-B90C-C7CBEF5D9085_1_102_o.jpeg" style="width:100%">
 										<div class="text">重庆美术馆</div>
 									</div>
 									<!-- Next and previous buttons -->
