UPDATE: ChuanYu - logo

--- a/post_ChuanYu.html
+++ b/post_ChuanYu.html
@@ -148,7 +148,7 @@
 									</div>
 								</p>
 
-								<h3>Day 1 - 南京禄口机场 <i class="fa fa-plane" aria-hidden="true"></i> 成都双流国际机场 <i class="fas fa-car"></i> 乐山</h3>
+								<h3>Day 1 - 南京禄口机场 <i class="fa fa-plane" aria-hidden="true"></i> 成都双流国际机场 <i class="fas fa-car-side"></i> 乐山</h3>
 								<p style="text-align:justify">虽然飞机晚点了，但是跷脚牛肉非常好吃！</p>
 							</div>
 						</section>
