UPDATE: ChuanYu - Day 5

--- a/post_ChuanYu.html
+++ b/post_ChuanYu.html
@@ -56,7 +56,9 @@
 						</header>
 						<section class="wrapper style5">
 							<div class="inner">
-								<p style="text-align:justify">本科毕业的暑假，决定和同学去稍微远一点的地方毕业旅行。纠结了一下，最后决定去四川和重庆。原因主要有2点：1. 听说成都和重庆的很多食物非常好吃；2. 听说九寨沟的风景非常好看，但是母上已经去过九寨沟了大概率不会带我去了，她也不可能放心我一个人去。商量之后确定的行程大概是<u>南京</u> <i class="fa fa-plane" aria-hidden="true"></i> <u>乐山（峨眉山）</u> <i class="fas fa-car-side"></i> <u>九寨沟+黄龙</u> <i class="fas fa-car-side"></i> <u>成都</u> <i class="fas fa-train"></i> <u>重庆（武隆）</u>。7月12日从南京禄口机场起飞，7月20日返回。</p>
+								<p style="text-align:justify">本科毕业的暑假，决定和同学去稍微远一点的地方毕业旅行。商量之后确定的行程大概是<u>南京</u> <i class="fa fa-plane" aria-hidden="true"></i> <u>乐山（峨眉山）</u> <i class="fas fa-car-side"></i> <u>都江堰 + 九寨沟 + 黄龙</u> <i class="fas fa-car-side"></i> <u>成都</u> <i class="fas fa-train"></i> <u>重庆（武隆）</u>。7月12日从南京禄口机场起飞，7月20日返回。</p>
+								
+								<p style="text-align:justify">总体而言，四川和重庆的食物真的非常好吃，景区管理很规范。不过因为景区之间路程往往比较长，如果不提前做好规划的话容易出现发现自己很多地点想去但是没办法去的尴尬局面。</p>
 
 								<p>
 									<!-- Slideshow container -->
@@ -148,8 +150,26 @@
 									</div>
 								</p>
 
-								<h3>Day 1 - 南京禄口机场 <i class="fa fa-plane" aria-hidden="true"></i> 成都双流国际机场 <i class="fas fa-car-side"></i> 乐山</h3>
-								<p style="text-align:justify">虽然飞机晚点了，但是跷脚牛肉非常好吃！</p>
+								<h3>Day 1 - 南京禄口机场 <i class="fa fa-plane" aria-hidden="true"></i> 成都双流国际机场 <i class="fas fa-car-side"></i> 乐山（峨眉山）</h3>
+								<p style="text-align:justify">第一天（或者说第零天？）基本就是在路上度过了。我们订的是下午从 <a href="https://www.njiairport.com"><i class="fa fa-map-marker" aria-hidden="true"></i>南京禄口国际机场</a> 直飞 <a href="http://www.cdairport.com"><i class="fa fa-map-marker" aria-hidden="true"></i>成都双流国际机场</a> 的航班。因为航班延误，我们到成都比较迟。出发前预定了租车，落地以后机场附近停车，直接开车去峨眉山脚下。到峨眉已经晚上八九点了，找了一家口碑比较好的跷脚牛肉吃晚饭，桌椅就放在路边上，店里还有一些本地人吃了晚饭在闲聊。店主和顾客都很热情，价格来说非常划算，翘脚牛肉和冰粉非常好吃，豆腐里拌了猪脑口味很特别，总体而言没有想象中辣。</p>
+
+								<h3>Day 2 - 峨眉山 <i class="fa fa-car-side" aria-hidden="true"></i> 乐山（市） <i class="fas fa-car-side"></i> 成都</h3>
+								<p style="text-align:justify">第二天一大早就起来收拾东西，在酒店吃了早饭然后开车去峨眉山。我们把车停在了黄湾停车场，在大门口取票然后乘坐景区的大巴上山。车开了差不多两个小时，把我们送到了索道口。乘坐缆车上山之后步行前往金顶浏览。路上有很多猴子，会抢游客的东西（尤其是食物）。金顶大佛非常壮观，山顶风景很不错。</p>
+								<p style="text-align:justify">我们的浏览时间不算很长，回到山脚下也下午两点多了，再去乐山大佛参观时间上有点勉强，<b>如果很想峨眉山和乐山大佛都玩好的话建议留2天时间</b>。纠结之后我们直接开到乐山市里找了一家本地同学推荐的钵钵鸡，很香。吃完直接开车回成都，把车还到机场然后打车去了酒店（成都按车牌号限行，因为酒店订在了城里，我们选择直接把车还到机场避免麻烦）。</p>
+								<p style="text-align:justify">晚上坐地铁去了宽窄巷子。感觉上有点像南京的老门东。灯光很好看，小酒馆有人在弹唱，冰粉很好吃。</p>
+
+								<h3>Day 3 - 成都 <i class="fa fa-car-side" aria-hidden="true"></i> 都江堰 <i class="fas fa-car-side"></i> 九寨沟</h3>
+								<p style="text-align:justify">听说九黄机场离景区还有一定距离，我们决定乘车前往九寨沟。考虑到路况问题（以及车上确实没有拥有长途自驾经验能处理爆胎等意外状况的老司机），我们选择包车前往九寨沟，途中游玩都江堰。都江堰风景秀丽，不过我们去的时候刚好暴雨，雨量过大，路上有不少积水。南桥的油纸伞和灯笼很有感觉，如果天气好的话应该很适合拍照。</p>
+								<p style="text-align:justify">出来之后就赶紧往九寨沟开，中途在映秀镇的县城小餐馆吃了顿简单的午餐，鱼香茄子和岷江鱼都很好吃，路边卖的水果很实惠而且品种很多很甜（好像是苹果和各种李、杏）。路上看到了传统羌族建筑的云朵和羊，看到了路边的经幡，看到了长在树上的花椒和核桃（孩子之前确实没见过orz）。途中遇到国道修路，司机师傅果断转向了老路（老路要从山上走，地面坑坑洼洼而且宽度刚好够两车，没有护栏，并且导航上不会显示全靠司机师傅认路，如果自驾应该就只能国道排队了）。山里还有村庄和人家，有小面包作为公共交通工具接送村民前往其他村落。我们十一点从都江堰出发，大概晚上八九点到的九寨沟，后来那天差不多时间从都江堰出发一直走国道的游客晚上十一二点才到。成都去九寨沟的高铁好像在修了，也许过几年就会通车，如果有机会很想再去一趟。</p>
+								<p style="text-align:justify">晚餐是在九寨沟的镇上吃的传统牦牛火锅和烤牛肉。肉很大块，酥油茶很香。老板热情豪爽，还送了我们一点青稞酒（是白酒做底，泡了一些药材，很香很烈，回来以后我一直很怀念那个味道并且后悔没买点）。吃完以后回了酒店。九寨沟的酒店离得都不太远，酒店会比城里面标准略低一点也便宜一些。</p>
+
+								<h3>Day 4 - 九寨沟</h3>
+								<p style="text-align:justify">在九寨沟玩了一整天，风景非常好，并没有明显的高原反应（不要奔跑不要奔跑不要奔跑）。景区餐厅的自助餐风评比较差，我们选择了自带自热米饭（服务中心有热水但是印象中有点贵，自热米饭相对泡面比较方便）。景区非常大，景点之间建议乘坐景区的观光车。容易突然下雨，要带好雨伞或者雨衣。</p>
+								<p style="text-align:justify">出来以后去看了九寨千古情，是找司机师傅拿的票，比官网便宜很多。演出效果很不错。晚上去的藏家宴，肉很香，酒远不如第三天晚上。</p>
+
+								<h3>Day 5 - 九寨沟 <i class="fa fa-car-side" aria-hidden="true"></i> 黄龙 <i class="fa fa-car-side" aria-hidden="true"></i> 成都</h3>
+								<p style="text-align:justify">黄龙的水非常好看！一般选择乘坐缆车上山然后步行下山。下山路程有点长，要记得穿走路比较舒服的鞋子。山上天气变化也比较大，要记得带保暖衣物（虽然可能用不上）。山脚下有德克士可以吃午饭。</p>
+								<p style="text-align:justify">然后就开车回成都了。到成都已经很晚了，直接酒店躺了。</p>
 							</div>
 						</section>
 					</article>
