UPDATE: ChuanYu finished

--- a/post_ChuanYu.html
+++ b/post_ChuanYu.html
@@ -170,6 +170,24 @@
 								<h3>Day 5 - 九寨沟 <i class="fa fa-car-side" aria-hidden="true"></i> 黄龙 <i class="fa fa-car-side" aria-hidden="true"></i> 成都</h3>
 								<p style="text-align:justify">黄龙的水非常好看！一般选择乘坐缆车上山然后步行下山。下山路程有点长，要记得穿走路比较舒服的鞋子。山上天气变化也比较大，要记得带保暖衣物（虽然可能用不上）。山脚下有德克士可以吃午饭。</p>
 								<p style="text-align:justify">然后就开车回成都了。到成都已经很晚了，直接酒店躺了。</p>
+
+								<h3>Day 6 - 成都</h3>
+								<p style="text-align:justify">上午去了成都大熊猫基地，大熊猫非常可爱（也非常懒），相比之下小熊猫非常有精神。中午吃了串串，很香，没有想象中辣。下午去了锦里，感觉像“三国特色版夫子庙”，看到了变脸表演非常满足。晚上去了春熙路，非常繁华。酒店边上的烧烤很好吃。</p>
+
+								<h3>Day 7 - 成都 <i class="fas fa-train"></i> 重庆</h3>
+								<p style="text-align:justify">早上坐火车去重庆，到的时候已经是中午了。吃了小面，然后打卡了三峡博物馆，回来乘坐了长江索道（先买票然后排队，我们是用排队时间去的三峡博物馆）。坐到江对岸以后就没有再排队坐索道回来了（要坐回来的话需要重新排队）。之后基本就在重庆城晃悠了。朝天门码头的江景很好看，在来福士吃了点重庆小吃（在重庆唯一一次真的被辣到）。在找公交站台的途中打卡了“地铁最佳拍摄地”（百度地图在重庆几乎没用，3D城市非常恐怖orz）。之后乘公交车去拍了来福士全景，然而白天没有上灯并不是很好看，不过拍到了日落。跑到李子坝观景台刚好有一辆车驶过，看到了车开进楼里的奇妙景观。搭上路边的小巷公交去鹅岭公园的瞰胜楼，车上的中年夫妇在争论明天吃什么。楼上的夜景很漂亮，非常羡慕边上大叔一背包的器材，以及他吧三脚架搭在我拍照的位置让我高兴了好久。最后去拍了洪崖洞，拍全景需要从桥的一头走向另一头再换方向走回来，被迫多走了2km。</p>
+								<p style="text-align:justify">这天的行程安排非常紧凑（索道之后的部分都是我一个人完成的），体力不够好的话强烈建议拆分到至少2天。</p>
+
+								<h3>Day 8 - 重庆 <i class="fa fa-car-side" aria-hidden="true"></i> 武隆 <i class="fa fa-car-side" aria-hidden="true"></i> 重庆</h3>
+								<p style="text-align:justify">自驾（租的车）前往武隆，顶着大太阳看了天生三桥并见到了极为抽象的锦鲤。之后顶着暴雨车游了“东方瑞士”，有机会想晴天来看一看大草原。天生三桥景区是乘坐大巴统一前往的，仙女山森林公园是可以自驾的，强烈建议自驾游玩。</p>
+								<p style="text-align:justify">晚上去观景台拍夜景，为了等一个“重庆你好<i class="fas fa-heart"></i>世界”举相机举到手酸，晚上整理的时候发现等待中的“重庆”好像更好看一些。拍完和重庆同学一起吃了好吃的火锅，很香！然后打卡了解放碑。</p>
+
+								<h3>Day 9 - 重庆 <i class="fa fa-plane" aria-hidden="true"></i> 南京</h3>
+								<p style="text-align:justify">买的下午的机票。上午的时间参观了重庆美术馆，中饭在来福士找了一家不错的拉面（喝到了伏见桃山）。除了晚上航班延误以外没有缺点。</p>
+
+								<h3>后记</h3>
+								<p style="text-align:justify">回来以后因为禄口机场疫情被关了整整14天。不过还好我们已经玩好回来了。</p>
+
 							</div>
 						</section>
 					</article>
