--- a/post_ChuanYu.html
+++ b/post_ChuanYu.html
@@ -30,7 +30,7 @@
 											<li><a href="index.html"><b>Home</b></a></li>
 											<li><b>2021</b>
 											<ul>
-												<li>四川 + 重庆</li>
+												<li><a href="post_ChuanYu.html"><u>四川 + 重庆</u></a></li>
 												<li>苏州</li>
 											</ul>
 											</li>
