--- a/post_ChuanYu.html
+++ b/post_ChuanYu.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Judy's Blog</title>
+		<title>摸鱼日记</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -20,7 +20,7 @@
 
 				<!-- Header -->
 					<header id="header">
-						<h1><a href="index.html">Judy's Blog</a></h1>
+						<h1><a href="index.html">摸鱼日记</a></h1>
 						<nav id="nav">
 							<ul>
 								<li class="special">
@@ -28,6 +28,11 @@
 									<div id="menu">
 										<ul>
 											<li><a href="index.html"><b>Home</b></a></li>
+											<li><b>2023</b>
+												<ul>
+													<li><a href="post_XiAn.html"><u>西安</u></a></li>
+												</ul>
+											</li>
 											<li><b>2021</b>
 											<ul>
 												<li><a href="post_ChuanYu.html"><u>四川 + 重庆</u></a></li>
