--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Judy's Blog</title>
+		<title>摸鱼日记</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -19,7 +19,7 @@
 
 				<!-- Header -->
 					<header id="header" class="alt">
-						<h1><a href="index.html">Judy's Blog</a></h1>
+						<h1><a href="index.html">摸鱼日记</a></h1>
 						<nav id="nav">
 							<ul>
 								<li class="special">
@@ -27,6 +27,11 @@
 									<div id="menu">
 										<ul>
 											<li><a href="index.html"><b>Home</b></a></li>
+											<li><b>2023</b>
+												<ul>
+													<li><a href="post_XiAn.html"><u>西安</u></a></li>
+												</ul>
+											</li>
 											<li><b>2021</b>
 											<ul>
 												<li><a href="post_ChuanYu.html"><u>四川 + 重庆</u></a></li>
@@ -50,9 +55,9 @@
 				<!-- Banner -->
 					<section id="banner">
 						<div class="inner">
-							<h2>Judy's Blog</h2>
-							<p>A place to hold Judy's posts about<br/>
-							traveling, food & something interesting.</p>
+							<h2>摸鱼日记</h2>
+							<p>记录一些摸鱼时刻，<br/>
+							比如旅行、动漫、游戏。</p>
 						</div>
 						<a href="#one" class="more scrolly">Learn More</a>
 					</section>
@@ -75,6 +80,12 @@
 
 				<!-- Two -->
 					<section id="two" class="wrapper alt style2">
+						<section class="spotlight">
+							<div class="image"><img src="images/XiAn/huashan.JPG" alt="panda" /></div><div class="content">
+								<h2>西安</h2>
+								<p>六日游，玩了西安城里、华山、兵马俑+华清池。烧烤、胡辣汤、饸饹都非常好吃，灯光好看，茶话弄好喝。</p>
+							</div>
+						</section>
 						<section class="spotlight">
 							<div class="image"><img src="images/ChuanYu/DSC04355.JPG" alt="panda" /></div><div class="content">
 								<h2>四川 + 重庆</h2>
@@ -108,7 +119,7 @@
 						<section class="spotlight">
 							<div class="image"><img src="images/Duke/B21FBFFE-82E0-4CEC-AD7B-58D585845EA6_1_105_c.jpeg" alt="duke_night" /></div><div class="content">
 								<h2>Duke University</h2>
-								<p>交换了一个学期。有很多收获。感觉有很多值得写的。有空一定补。</p>
+								<p>交换了一个学期。有很多收获。感觉有很多值得写的。<s>有空一定补。</s>补不了了，忘了，留下很多快乐的回忆。</p>
 							</div>
 						</section>
 					</section>
@@ -123,23 +134,24 @@
 							<ul class="features" styles="line-height:1.75">
 								<li class="fas fa-video">
 									<h3>最近看番</h3>
-									<p>小林家的龙女仆S</br>
-									我们的重制人生</p>
+									<p>葬送的芙丽莲</br>
+									药屋少女的呢喃</p>
 								</li>
 								<li class="fas fa-gamepad">
 									<h3>最近打游戏</h3>
-									<p>FF14</br>
-									Princess Connect: ReDive（摸鱼行会“正规行会”招人啦）</p>
+									<p>崩铁</br>
+									动森</p>
 								</li>
 								<li class="fas fa-book">
 									<h3>最近看漫画</h3>
-									<p>辉夜</br>
-									影宅</br>
-									间谍过家家（听说快要动画化了，好耶！）</p>
+									<p>葬送的芙丽莲</br>
+									   药屋少女的呢喃</br>
+									   间谍过家家</br>
+									   我推的孩子</p>
 								</li>
 								<li class="fas fa-sticky-note">
 									<h3>杂项</h3>
-									<p>毕业旅行圆满结束啦！等有空了就来更新。最近在居家隔离，欢迎找我聊天x</p>
+									<p>要毕业啦！要变成社畜了（x</p>
 								</li>
 							</ul>
 						</div>
@@ -154,7 +166,7 @@
 							<li><a href="mailto:judy9906@gmail.com" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
 						</ul>
 						<ul class="copyright">
-							<li>&copy; Runyu He</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+							<li>&copy; 咸鱼Judy</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
 						</ul>
 					</footer>
 
