--- a/post_XiAn.html
+++ b/post_XiAn.html
@@ -61,7 +61,7 @@
 						</header>
 						<section class="wrapper style5">
 							<div class="inner">
-								<p style="text-align:justify">研一寒假的行程，顶着补实验+面试暴击的双重压力还是决定出来玩。确定的行程大概是<u>南京</u> <i class="fa fa-train" aria-hidden="true"></i> <u>西安</u> <i class="fas fa-train"></i> <u>南京</u>，行程共计6天。在西安主要靠地铁和打车。时间上刚好是元宵刚过，人不多但还很有一番年味。</p>
+								<p style="text-align:justify">研二寒假的行程，顶着补实验+面试暴击的双重压力还是决定出来玩。确定的行程大概是<u>南京</u> <i class="fa fa-train" aria-hidden="true"></i> <u>西安</u> <i class="fas fa-train"></i> <u>南京</u>，行程共计6天。在西安主要靠地铁和打车。时间上刚好是元宵刚过，人不多但还很有一番年味。</p>
 
 								<p>
 									<!-- Slideshow container -->
