--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
 											<li><a href="index.html"><b>Home</b></a></li>
 											<li><b>2023</b>
 												<ul>
+													<li><a href="post_Guangzhou.html"><u>广州</u></a></li>
 													<li><a href="post_XiAn.html"><u>西安</u></a></li>
 												</ul>
 											</li>
@@ -80,6 +81,12 @@
 
 				<!-- Two -->
 					<section id="two" class="wrapper alt style2">
+						<section class="spotlight">
+							<div class="image"><img src="images/Guangzhou/guangzhouta.JPG" alt="panda" /></div><div class="content">
+								<h2>广州 + 佛山</h2>
+								<p>四日游，玩了广州，小逛了一下佛山。榕树超大，醒狮表演很有意思，随便一家店都很好吃。</p>
+							</div>
+						</section>
 						<section class="spotlight">
 							<div class="image"><img src="images/XiAn/huashan.JPG" alt="panda" /></div><div class="content">
 								<h2>西安</h2>
