--- a/post_NY.html
+++ b/post_NY.html
@@ -30,6 +30,7 @@
 											<li><a href="index.html"><b>Home</b></a></li>
 											<li><b>2023</b>
 												<ul>
+													<li><a href="post_Guangzhou.html"><u>广州</u></a></li>
 													<li><a href="post_XiAn.html"><u>西安</u></a></li>
 												</ul>
 											</li>
