ADDED: Japan_Kansai

--- a/index.html
+++ b/index.html
@@ -29,6 +29,12 @@
 											<li><a href="index.html"><b>Home</b></a></li>
 											<li><b>2023</b>
 												<ul>
+													<li><a href="post_Japan_Kansai.html"><u>日本（关西）</u></a></li>
+													<li>新加坡</li>
+													<li>烟台</li>
+													<li>福州 + 泉州 + 厦门</li>
+													<li>南昌</li>
+													<li>济南</li>
 													<li><a href="post_Guangzhou.html"><u>广州</u></a></li>
 													<li><a href="post_XiAn.html"><u>西安</u></a></li>
 												</ul>
@@ -81,6 +87,42 @@
 
 				<!-- Two -->
 					<section id="two" class="wrapper alt style2">
+						<section class="spotlight">
+							<div class="image"><img src="images/Japan_Kansai/0_inari.JPG" alt="panda" /></div><div class="content">
+								<h2>日本（关西）</h2>
+								<p>每天都走很多路。</p>
+							</div>
+						</section>
+						<section class="spotlight">
+							<div class="image"><img src="images/Singapore/0_zhangyi.jpg" alt="panda" /></div><div class="content">
+								<h2>新加坡</h2>
+								<p>很热很闷，但是非常值得一游。</p>
+							</div>
+						</section>
+						<section class="spotlight">
+							<div class="image"><img src="images/Yantai/0_yangmadao.JPG" alt="panda" /></div><div class="content">
+								<h2>烟台</h2>
+								<p>非常舒适的海边城市，吹着海风等待日落，然后自驾去寻找美味的海鲜。</p>
+							</div>
+						</section>
+						<section class="spotlight">
+							<div class="image"><img src="images/Quanzhou/0_quanzhou.JPG" alt="panda" /></div><div class="content">
+								<h2>福州 + 泉州 + 厦门</h2>
+								<p>海风有点凛冽（可能因为是冬天），海水很蓝很好看，花和古寺别有韵味，面线有点顶。</p>
+							</div>
+						</section>
+						<section class="spotlight">
+							<div class="image"><img src="images/Nanchang/0_tengwangge.JPG" alt="panda" /></div><div class="content">
+								<h2>南昌</h2>
+								<p>很舒服的城市，秋水广场喷泉很好看，海昏侯博物馆很震撼。有点辣。</p>
+							</div>
+						</section>
+						<section class="spotlight">
+							<div class="image"><img src="images/Jinan/0_museum.JPG" alt="panda" /></div><div class="content">
+								<h2>济南</h2>
+								<p>泉很多，面疙瘩好吃。</p>
+							</div>
+						</section>
 						<section class="spotlight">
 							<div class="image"><img src="images/Guangzhou/guangzhouta.JPG" alt="panda" /></div><div class="content">
 								<h2>广州 + 佛山</h2>
