--- a/post_NY.html
+++ b/post_NY.html
@@ -30,6 +30,12 @@
 											<li><a href="index.html"><b>Home</b></a></li>
 											<li><b>2023</b>
 												<ul>
+													<li><a href="post_Japan_Kansai.html"><u>日本（关西）</u></a></li>
+													<li>新加坡</li>
+													<li>烟台</li>
+													<li>福州 + 泉州 + 厦门</li>
+													<li>南昌</li>
+													<li>济南</li>
 													<li><a href="post_Guangzhou.html"><u>广州</u></a></li>
 													<li><a href="post_XiAn.html"><u>西安</u></a></li>
 												</ul>
